# emx-mcp-server

./: .env  .gitignore  .pre-commit-config.yaml  ADAPTIVE_ROUTING_IMPLEMENTATION.md  AUDIT_RECOMMENDATIONS.md  BENCHMARK_ANALYSIS.md  COMPLETENESS_AUDIT.md  CUDA_AUDIT_REPORT.md  LICENSE.md  README.md  SESSION_SUMMARY_ROUTING_COMPLETE.md  TRAINING_BUFFER_FIX.md  coverage.json  pyproject.toml
.github/workflows/: ci.yaml  pre-commit.yaml
.memories/graph_db/: events.db
benchmarks/: README.md  adaptive_nlist_benchmark.py  batch_search_benchmark.py  benchmark_results.json  e2e_30k_tokens_benchmark.py  e2e_60k_tokens_benchmark.py  mcp_tools_benchmark_results.json  mcp_tools_performance_benchmark.py
docs/: ENVIRONMENT_VARIABLES.md  GRAFANA_CLOUD_SETUP.md  OTLP_TESTING.md  PERFORMANCE_REPORT.md  grafana-dashboard-example.json
docs/adr/: 001-opentelemetry-metrics.md
emx_mcp/: __init__.py  server.py
emx_mcp/embeddings/: __init__.py  encoder.py
emx_mcp/gpu/: __init__.py  pinned_memory.py  stream_manager.py
emx_mcp/memory/: project_manager.py  retrieval.py  segmentation.py  storage.py
emx_mcp/metrics/: __init__.py  instruments.py  setup.py
emx_mcp/models/: events.py  projects.py
emx_mcp/storage/: disk_manager.py  graph_store.py  vector_store.py
emx_mcp/tools/: __init__.py  manage_memory.py  recall_memories.py  remember_context.py  remove_memories.py  search_memory_batch.py  store_memory.py  transfer_memory.py
emx_mcp/utils/: config.py  config_validator.py  hardware.py  logging.py
tests/: __init__.py  conftest.py  test_adaptive_nlist.py  test_batch_encoding.py  test_batch_search.py  test_boundary_refinement.py  test_config.py  test_config_integration.py  test_encoder.py  test_encoder_pinned.py  test_gpu_streams.py  test_hardware.py  test_integration.py  test_mcp_tools.py  test_metrics_health.py  test_segmentation.py  test_sq_compression.py  test_sq_fixed.py  test_temporal_linking.py
