[project]
name = "emx-mcp-server"
version = "1.0.0"
description = "Infinite context MCP server with EM-LLM episodic memory using IVF indexing"
authors = [{ name = "malu (Dayton Dunbar)", email = "coderdayton14@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
keywords = [
  "episodic-memory",
  "mcp-server",
  "vector-search",
  "faiss",
  "sentence-transformers",
  "context-management",
  "ai",
  "nlp",
]
dependencies = [
  "fastmcp>=2.13.0.2",
  "numpy>=1.26.0,<2.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "sentence-transformers>=5.1.2",
  "torch>=2.9.0",
  "torchaudio>=2.9.0",
  "torchvision>=0.24.0",
  "faiss-gpu-cu12>=1.12.0",
  "types-pygments>=2.19.0.20250809",
  "types-pexpect>=4.9.0.20250916",
  "types-psutil>=7.0.0.20251001",
  "pre-commit>=4.3.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.18.2",
    "psutil>=7.1.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--disable-warnings",
  "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]

[project.scripts]
emx-mcp-server = "emx_mcp.server:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["emx_mcp*"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["emx_mcp"]
exclude = ["tests", "benchmarks"]
disable_error_code = ["type-arg", "no-untyped-def", "no-untyped-call", "no-any-return", "unused-ignore", "has-type", "assignment", "misc"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "benchmarks"]
skips = ["B101"]
